Issue #2364 Run-TestsInBcContainer fails with certificate validation error
Better error message when authentication fails in Publish-PerTenantExtensionApps
Issue #2393 Scopes is wrong when using ClientId, ClientSecret and TenantId in Publish-PerTenantExtensionApps

3.0.4
Issue #2349 Run-AlCops/Extract-AppFileToFolder fail if runtime is >=8.0 and no ResourceExposurePolicy is set
Stop treating AL1026 warning as error by default
Support for application dependency in Sort-AppFoldersByDependencies
Support for all manifest (app.json) 'features' in Extract-AppFileToFolder
Issue #2360 -isolation hyperv isn't always used when specified and building a new image
Add -includeDacPac parameter to Export-BcContainerDatabasesAsBacpac
Issue #2375 Get-BestGenericImageName finds wrong generic image if host OS is very very old

3.0.3
Issue #2303 Get-BestGenericImageName sometimes returns an image which is newer than the host OS
Hardcode replacement artifacts for 16.18
Issue #2308 Added blobPath to Publish-BuildOutputToStorage
Issue #2321 Add language to Start-BcContainerAppDataUpgrade
Issue #2320 Better error message in Publish-PerTenantExtensionApps
Issue #2325 Support for resourceExposurePolicy in Extract-AppFileToFolder
Issue #2286 Publish-NavContainerApp -upgrade -install fails if app was not installed before
Issue #2342 Publish-NavContainerApp and Replace-DependenciesInAppFile doesn't support ResourceExposurePolicy
Adding Argentina, Chile and Puerto Rico to the country map, mapping to w1
Get CreateTestUsers app from new feed
Add support for compiling with Windows auth
Do not display query parameters of licensefile url
Allow wildcards when publishing apps from inside container

3.0.2
Issue #2280 TypeNotFound on [Path]::GetFileName($vsixUrl)
Issue "2287 Create-AadAppsForBC function now creating error when used along with -preAuthorizePowerShell
Issue - Resolve-DependenciesFromAzureFeed not ignoring first lvl dependencies