@@ -8,6 +8,7 @@ Issue #2365 New Parameter on Compile-AppInBcContainer (-ReportSuppressedDiagnost
 Issue #2364 Run-TestsInBcContainer fails with certificate validation error
 Better error message when authentication fails in Publish-PerTenantExtensionApps
 Issue #2393 Scopes is wrong when using ClientId, ClientSecret and TenantId in Publish-PerTenantExtensionApps
+Run-AlValidation to check whether app is signed (unless SkipVerification is specified)
 
 3.0.4
 Issue #2349 Run-AlCops/Extract-AppFileToFolder fail if runtime is >=8.0 and no ResourceExposurePolicy is set
